Add a page with a list of modules/tool related to module developpement

--- a/Language/modules.pod
+++ b/Language/modules.pod
@@ -446,6 +446,11 @@ To use C<Vortex::TotalPerspective> from your scripts, just write
 C<use Vortex::TotalPerspective>, and your Perl 6 implementation will
 know where to look for the module file(s).
 
+=head1 Modules and Tools related to module authoring
+
+You can find a list of modules and tools that aim to improve the experience of
+writing/test modules at L<Modules Extra|/language/modules-extra>
+
 =end pod
 
 # vim: expandtab shiftwidth=4 ft=perl6
