two typos and a missing paren

--- a/Language/glossary.pod
+++ b/Language/glossary.pod
@@ -260,7 +260,7 @@ shorter than 10 characters:
 The C<Str> in the above example is also a constraint, but is usually
 referred to as a "type constraint."
 
-Note that you can elso differentiate candidates in a
+Note that you can also differentiate candidates in a
 L<multi-dispatch|#Multi-Dispatch> by using a different constraint:
 
     multi sub abbreviate(Str $thing where { .chars > 10 }) {
@@ -268,7 +268,7 @@ L<multi-dispatch|#Multi-Dispatch> by using a different constraint:
     }
     multi sub abbreviate(Str $thing) { $thing }  # no constraint
 
-    say abbreviate("Worthington";    # Worthin...
+    say abbreviate("Worthington");   # Worthin...
     say abbreviate("Mäsak");         # Mäsak
 
 =head1 Cool
@@ -370,7 +370,7 @@ As Late As Possible
 
 =head2 autopun
 
-A self-referencing pun, e.g. "Are you ignorant or apathetic?" - "I don'ti
+A self-referencing pun, e.g. "Are you ignorant or apathetic?" - "I don't
 know, and I don't care.
 
 =head2 backlog
