assorted spelling/typo errors

--- a/Language/operators.pod
+++ b/Language/operators.pod
@@ -111,7 +111,7 @@ L</language/functions#Defining_Operators>.
 
 Meta operators can be parameterized with other operators in the same way as
 functions can take functions as parameters. Perl 6 will generate the actual
-combinded operator in the background, allowing the mechanism to be applied
+combined operator in the background, allowing the mechanism to be applied
 to user defined operators. There are quite a few Meta operators with
 different semantics, as explained in detail as follows.
 
@@ -145,7 +145,7 @@ Although not strictly operators, methods can be used in the same fashion.
 =head2 Negated Relational Operators
 
 The result of a relational operator returning C<Bool> can be negated by
-prefixing with C<!>. To avoid visial confusion with the C<!!> operator,
+prefixing with C<!>. To avoid visual confusion with the C<!!> operator,
 you may not modify any operator already beginning with C<!>.
 
 There are shortcuts for C<!==> and C<!eq>, namely C<!=> and C<ne>.
@@ -182,7 +182,7 @@ Assignment meta operators can be hyped.
     my @a = 1,2,3;
     say @a »+=» 1; # [2 3 4]
 
-Hyper forms of unary opators have the pointy bit point to the operator and
+Hyper forms of unary operators have the pointy bit point to the operator and
 the blunt end at the list to be operated on.
 
     my @wisdom = True, False, True;
@@ -191,14 +191,14 @@ the blunt end at the list to be operated on.
     my @a = 1,2,3;
     @a»++;          # (2,3,4)
 
-Hyper operators are defined recursivly on nested arrays.
+Hyper operators are defined recursively on nested arrays.
 
     say -« [[1, 2], 3]; # [[-1 -2] -3]
 
-Methods can be called too, in a out of order, cuncurrent fashion. The resulting
+Methods can be called too, in a out of order, concurrent fashion. The resulting
 list is in order. Please note that all hyper operators are candidates for
 autothreading and will cause tears if said methods have side effects. The
-optimizer has full reign over hyper operators, what is the reasion that they
+optimizer has full reign over hyper operators, which is the reason that they
 can not be defined by the user.
 
     my CarefulClass @objs;
@@ -207,7 +207,7 @@ can not be defined by the user.
     my @slops; # May Contain Nuts
     @slops».?this-method-may-not-exist();
 
-Hyper operatos can work with hashes. The pointy direction indicates if missing
+Hyper operators can work with hashes. The pointy direction indicates if missing
 keys are to be ignored in the resulting hash. The enclosed operator operates on
 all values that have keys in both hashes.
 
@@ -271,12 +271,12 @@ They can be defined as a list prefix operators or will be generated automaticall
     say @l [~~] {$^a ~~ Str}; # (a b)
 
 For list infix operators, flattening is not done on the input list. This
-allowes list operators to become the reduction operator.
+allows list operators to become the reduction operator.
 
     [X~] (1,2), <a b> # 1,2 X~ <a b>
 
 By default reduction meta operators are eager. To lazily generate values,
-prefix the operater with a C<\>. If the non-meta part contains a C<\> already,
+prefix the operator with a C<\>. If the non-meta part contains a C<\> already,
 quote it with C<[]> (e.g. C<[\[\x]]>). 
 
     my $lazy := [\+] 1..*;
