--- a/Language/list.pod
+++ b/Language/list.pod
@@ -158,7 +158,7 @@ This works no matter how many levels deep the parenthesis are nested.
     say (1,(2,(3,4)),5).flat eqv (1,2,3,4,5) # says True
 
 This is not really a syntactical "context" as much as it is a process of
-iteration, but it has the appearence of a context.
+iteration, but it has the appearance of a context.
 
 Note that L<C<Scalar>s|/type/Scalar> around a list will make it immune to
 flattening:
@@ -199,7 +199,7 @@ so all the elements, even the C<Pair> C<:c(3)>, are placed in the C<Array>.
     my @a = 1, 2, :c(3); Array.new: @a;
     my @a = 1, 2, :c(3); new Array: @a;
     
-In argument list contet the C<|> prefix operator applied to a C<Positional>
+In argument list context the C<|> prefix operator applied to a C<Positional>
 will always slip list elements as positional arguments to the Capture,
 while a C<|> prefix operator applied to an C<Associative> will slip pairs in
 as named parameters:
@@ -213,7 +213,7 @@ as named parameters:
 
     [ 1, 2, :c(3) ]
 
-=comment TODO actualy not sure if there is anything special here, other then the internal itemization best left for later -- eager maybe?
+=comment TODO actually not sure if there is anything special here, other then the internal itemization best left for later -- eager maybe?
 
 =head2 Slice Indexing Context
 
