--- a/Language/operators.pod
+++ b/Language/operators.pod
@@ -195,7 +195,7 @@ Hyper operators are defined recursively on nested arrays.
 
     say -« [[1, 2], 3]; # [[-1 -2] -3]
 
-Methods can be called too, in a out of order, concurrent fashion. The resulting
+Methods can be called too, in an out of order, concurrent fashion. The resulting
 list is in order. Please note that all hyper operators are candidates for
 autothreading and will cause tears if said methods have side effects. The
 optimizer has full reign over hyper operators, which is the reason that they
