Fix tense due to pluralization

--- a/Language/5to6-nutshell.pod
+++ b/Language/5to6-nutshell.pod
@@ -499,7 +499,7 @@ L<S03/Smart matching|https://design.perl6.org/S03.html#Smart_matching>
 =head3 C<& | ^> Numeric Bitwise ops
 =head3 C<& | ^> Boolean ops
 
-In Perl 5, C<& | ^> were invoked according to the contents of its
+In Perl 5, C<& | ^> were invoked according to the contents of their
 arguments. For example, C<31 | 33> returns a different result than C<"31" |
 "33">.
 
