--- a/Type/Str.pod
+++ b/Type/Str.pod
@@ -693,7 +693,7 @@ Example:
 Replaces one or many substrings with one or many strings. Ranges are supported, both for keys and
 values. Regexes work as keys. When called with C<:complement> anything but the matched value or range
 is replaced with a single value. With C<:delete> the matched characters are removed.
-Combining C<:complement> and C<:delete> will remove anything but the mached values.
+Combining C<:complement> and C<:delete> will remove anything but the matched values.
 The adverb C<:squash> will reduce repeated matched characters to a single character. 
 
 Example:
