--- a/Language/traps.pod
+++ b/Language/traps.pod
@@ -227,7 +227,9 @@ There are methods that Str inherits from Any that work on iterables like lists. 
     say "abc".reverse;              #   abc (what is wrong)
     say "abc".comb.reverse.join;    #   cba
 
-=head1 Adverbs and Precedence
+=head1 Common Precedence Mistakes
+
+=head2 Adverbs and Precedence
 
 Adverbs do have a precedence that may not follow the order of operators that is displayed on your screen. If two operators of equal precedence are followed by an adverb it will pick the first operator it find in the abstract syntax tree. Use paranteses to help Perl 6 to understand what you mean or use operators with looser precedence.
 
@@ -237,7 +239,14 @@ Adverbs do have a precedence that may not follow the order of operators that is 
     say !(%x<b>:exists);          # works too
     say not %x<b>:exists;         # works as well
     say True unless %x<b>:exists; # avoid negation altogether
-    
+
+=head2 Ranges and Precedence
+
+The loose precedence of C<..> can lead to some errors.  It is usually best to parenthesize ranges when you want to operate on the entire range.
+
+    1..3.say    # says "3" (and warns about useless "..")
+    (1..3).say  # says "1..3"
+
 =end pod
 
 # vim: expandtab shiftwidth=4 ft=perl6
