Minor massaging, mostly to links

--- a/Language/list.pod
+++ b/Language/list.pod
@@ -12,7 +12,7 @@ an elegant system for handling them.
 
 =head1 Literal Lists
 
-Literal L<C<List>s|/type/List>> are created with commas B<not> with
+Literal L<C<List>s|/type/List> are created with commas B<not> with
 parentheses, so:
 
     1,2         # This is two-element list
@@ -157,8 +157,8 @@ to put an infinite list, lest your program hang and, eventually, run out of memo
 =head2 Flattening "Context"
 
 When you have a list that contains sub-lists, but you only want one flat list,
-you may flatten the list to produce a sequence of values as if all parentheses.
-This works no matter how many levels deep the parenthesis are nested.
+you may flatten the list to produce a sequence of values as if all parentheses
+were removed. This works no matter how many levels deep the parenthesis are nested.
 
     say (1,(2,(3,4)),5).flat eqv (1,2,3,4,5) # says True
 
@@ -184,7 +184,7 @@ syntax rules are at play: the list is immediately converted into a
 C<Capture>.  A C<Capture> itself has a List (C<.list>) and a Hash (C<.hash>).
 Any C<Pair> literals whose keys are not quoted, or which are not parenthesized,
 never make it into C<.list>.  Instead, they are considered to be named
-arguments and squashed into C<.hash>.  See the page on L<C<Capture>|types/Capture>
+arguments and squashed into C<.hash>.  See the L<page on C<Capture>|/types/Capture>
 for the details of this processing.
 
 Consider the following ways to make a new C<Array> from a C<List>.  These ways
