Fix case of abbreviated Unicode properties, perlawhirl++

--- a/Language/regexes.pod
+++ b/Language/regexes.pod
@@ -209,7 +209,7 @@ L<perlunicode|http://perldoc.perl.org/perlunicode.html> documentation:
     Nd          Decimal_Number (also Digit)
     Nl          Letter_Number
     No          Other_Number
-    P           Punctuation (also Punct)
+    P           Punctuation (also punct)
     Pc          Connector_Punctuation
     Pd          Dash_Punctuation
     Ps          Open_Punctuation
@@ -229,7 +229,7 @@ L<perlunicode|http://perldoc.perl.org/perlunicode.html> documentation:
     Zl          Line_Separator
     Zp          Paragraph_Separator
     C           Other
-    Cc          Control (also Cntrl)
+    Cc          Control (also cntrl)
     Cf          Format
     Cs          Surrogate
     Co          Private_Use
