--- a/Language/modules.pod
+++ b/Language/modules.pod
@@ -265,8 +265,8 @@ passing C<:DEFAULT> to C<use> along with your positional parameters. Type captur
     sub EXPORT($short_name?, ::T) {
         role R[::TT] { }
         class C { }
-        multi sub infix:<~>(C \l, T \r){ note "supressed concat with: ", T.WHAT; };
-        multi sub infix:<~>(T \l, C \r){ note "supressed concat with: ", T.WHAT; };
+        multi sub infix:<~>(C \l, T \r){ note "suppressed concat with: ", T.WHAT; };
+        multi sub infix:<~>(T \l, C \r){ note "suppressed concat with: ", T.WHAT; };
         {
             do $short_name => MyModule::Class if $short_name,
             'MixedC' => C but R.^parameterize(T), # workaround for RT#127256
