--- a/Language/syntax.pod
+++ b/Language/syntax.pod
@@ -155,7 +155,7 @@ the middle, but not two in a row.
     fish-food
 
     # not valid identifiers:
-    with-nubmers1234-5
+    with-numbers1234-5
     42
     is-prime?
     fish--food
@@ -330,7 +330,7 @@ constructing them: C<< key => 'value' >> and C<:key('value')>.
 
 Arrow pairs can have an expression or an identifier on the left-hand side:
 
-    identifer => 42
+    identifier => 42
     "identifier" => 42
     ('a' ~ 'b') => 1
 
