--- a/Type/X/Channel/SendOnClosed.pod
+++ b/Type/X/Channel/SendOnClosed.pod
@@ -6,7 +6,7 @@
 
     class X::Channel::SendOnClosed { ... }
 
-This exception is thrown when a calling C<send> on a L<Channel|/type/Channel> thas has been closed:
+This exception is thrown when a calling C<send> on a L<Channel|/type/Channel> that has been closed:
 
     my $s = Channel.new;
     $s.close;
