--- a/Language/nativecall.pod
+++ b/Language/nativecall.pod
@@ -413,7 +413,7 @@ More examples can be found L<in the DBIsh repository
 =head2 MySQL
 
 =comment TODO Do we really need this here? Seems like this info should just go
-              along-side that example in the git repo, rathern than replicated
+              along-side that example in the git repo, rather than replicated
               on p6doc.
 
 There is an example of using the MySQL client library. There is a project
