--- a/Language/variables.pod
+++ b/Language/variables.pod
@@ -988,12 +988,13 @@ the block to the caught exception.
 =head2 Compile-time variables
 
 =for table
-    $?FILE      Which file am I in?
-    $?LINE      Which line am I at?
-    &?ROUTINE   Which routine am I in?
-    &?BLOCK     Which block am I in?
-    %?LANG      What is the current set of interwoven languages?
-    %?RESOURCES The files associated with the "Distribution" of the current compilation unit.
+    $?FILE         Which file am I in?
+    $?LINE         Which line am I at?
+    ::?CLASS       Which class am I in?
+    &?ROUTINE      Which routine am I in?
+    &?BLOCK        Which block am I in?
+    %?LANG         What is the current set of interwoven languages?
+    %?RESOURCES    The files associated with the "Distribution" of the current compilation unit.
 
 Other compile-time variables:
 
