--- a/Language/terms.pod
+++ b/Language/terms.pod
@@ -161,4 +161,10 @@ Returns the imaginary unit (for L<Complex> numbers).
 
 Variables are discussed in the L<variable language docs |/language/variables>.
 
+=head1 Constants
+
+Constants are declared with C<constant> and do not require a sigil. The RHS is evaluated at compile time, what may be to early to make sense.
+
+    constant Pi = 3.123; # if you happen to be Babylonian
+
 =end pod
