Mention way to suppress backtrace

--- a/Language/exceptions.pod
+++ b/Language/exceptions.pod
@@ -164,6 +164,22 @@ method C<.resume> on the exception object.
 
     say "We have continued with control flow."; # this is step 3
 
+=head2 Uncaught Exceptions
+
+If an exception is thrown and not caught, it causes the program to exit with a
+non-zero status code, and typically prints a message to the standard error
+stream of the program. This message is obtained by calling the C<gist> method
+on the exception object. You can use this to suppress the default behavior of
+printing a backtrace along with the message:
+
+    class X::WithoutLineNumber is X::AdHoc {
+        multi method gist(X::WithoutLineNumber:D:) {
+                $.payload
+        }
+    }
+    die X::WithoutLineNumber.new(payload => "message")
+        # prints "message\n" to $*ERR and exits, no backtrace
+
 =end pod
 
 # vim: expandtab shiftwidth=4 ft=perl6
