--- a/Type/Str.pod
+++ b/Type/Str.pod
@@ -466,7 +466,7 @@ Returns the invocant string where C<$matcher> is replaced by C<$replacement>
 There is an in-place syntactic variant of C<subst> spelled
 C<s/matcher/replacement>.
 
-C<$matcher> an be a L<Regex>, or a literal C<Str>. Non-Str matcher arguments
+C<$matcher> can be a L<Regex>, or a literal C<Str>. Non-Str matcher arguments
 of type L<Cool> are coerced to C<Str> for literal matching.
 
     my $some-string = "Some foo";
