--- a/Language/nativecall.pod
+++ b/Language/nativecall.pod
@@ -399,7 +399,7 @@ exported by the "libc.so.6" library.
 
 NativeCall offer a support to use class and method  from C++ as show in
 L<https://github.com/rakudo/rakudo/blob/nom/t/04-nativecall/13-cpp-mangling.t> (and it associated cpp file)
-But it's not as tested and developped than the C support for now.
+Note that at the moment it's not as tested and developed as C support.
 
 =head1 Examples
 
