Reindexed =head markers

--- a/Language/regexes.pod
+++ b/Language/regexes.pod
@@ -652,7 +652,7 @@ all named captures:
 There is a more convenient way to get named captures which is discussed in
 the section on Subrules.
 
-=SUBTITLE Substitution
+=head1 Substitution
 
 Regular expressions can also be used to substitute one piece of text for
 another.  You can use this for anything from correcting a spelling error (for
@@ -663,7 +663,7 @@ Just like the search-and-replace editor's dialog box, the C<s/ / /> operator
 has two sides, a left and right side.  The left side is where your matching
 expression goes, and the right-hand side is what you want to replace it with.
 
-=head1 X<Lexical conventions|quote,s/ / />
+=head2 X<Lexical conventions|quote,s/ / />
 
 Substitutions are written similarly to matching, but the substitution operator
 has both an area for the text to substitute, and the text to be substituted:
@@ -685,7 +685,7 @@ Like the C<m//> operator, whitespace is ignored in general.  Comments, as in
 Perl 6 in general, start with the hash character C<#> and go to the end of
 the current line.
 
-=head1 Replacing literals
+=head2 Replacing literals
 
 The simplest thing to replace is a literal string.  The string you want to
 replace goes on the left-hand side of the substitution operator, and the string
@@ -713,7 +713,7 @@ unexpected consequences:
     s/tw/on/;                     # Replace 'tw' with 'on' once
     .say;                         # There can be only two
 
-=head1 Wildcards and character classes
+=head2 Wildcards and character classes
 
 Anything that can go into the C<m//> operator can go into the left-hand side
 of the substitution operator, including wildcards and character classes.  This
@@ -727,7 +727,7 @@ a number in the middle of a string:
 Of course, you can use any of the C<+>, C<*> and C<?> modifiers, and they'll
 behave just as they would in the C<m//> operator's context.
 
-=head1 Capturing Groups
+=head2 Capturing Groups
 
 Just as in the match operator, capturing groups are allowed on the left-hand
 side, and the matched contents populate the C<$0>..C<$n> variables and the
@@ -761,7 +761,7 @@ the power of the Parser Expression Grammars that B<really> underly what you're
 seeing here, you can use "regular expressions" to parse pretty much any
 language out there.
 
-=head2 Common adverbs
+=head3 Common adverbs
 
 The full list of adverbs that you can apply to regular expressions can be found
 elsewhere in this document (L<section Adverbs|#Adverbs>), but the most
