--- a/Language/control.pod
+++ b/Language/control.pod
@@ -679,6 +679,18 @@ All these forms may produce a return value the same way C<loop> does.
 
 =comment TODO
 
+=head2 X<once|control flow>
+
+A block prefix with once will be executed exactly once, even if placed inside a
+loop or a recursive routine.
+
+    my $guard = 3; 
+    loop { 
+        last if $guard-- <= 0; 
+        once { put 'once' }; 
+        print 'many' 
+    } # OUTPUT«once␤manymanymany»
+
 =head2 LABELs
 
 C<while>, C<until>, and C<for> loops can all take a label, which can be
