--- a/Language/control.pod
+++ b/Language/control.pod
@@ -681,7 +681,7 @@ All these forms may produce a return value the same way C<loop> does.
 
 =head2 X<once|control flow>
 
-A block prefix with once will be executed exactly once, even if placed inside a
+A block prefix with C<once> will be executed exactly once, even if placed inside a
 loop or a recursive routine.
 
     my $guard = 3; 
@@ -690,6 +690,14 @@ loop or a recursive routine.
         once { put 'once' }; 
         print 'many' 
     } # OUTPUT«once␤manymanymany»
+
+=head2 X<quietly|control flow>
+
+A C<quietly> block will suppress warnings.
+
+    quietly { warn 'kaput!' };
+    warn 'still kaput!';
+    OUTPUT«still kaput! [...]␤»
 
 =head2 LABELs
 
