make it more clear positionals from subst apply to subst-mutate too

--- a/Type/Str.pod
+++ b/Type/Str.pod
@@ -518,6 +518,7 @@ object representing the successful match, or C<Any> otherwise.
     my $match = $some-string.subst-mutate(/foo/, "string");
     say $some-string;  #-> Some string
     say $match;        #-> ｢foo｣
+    $some-string.subst-mutate(/<[oe]>/, '', :g); # remove all o'ss and e's, notice the :g named argument from .subst
 
 =head2 routine substr
 
