--- a/Type/Callable.pod
+++ b/Type/Callable.pod
@@ -38,4 +38,15 @@ corresponding parameters.
 
 =comment according to design docs it's Callable but in rakudo it's assuming is in Block
 
+=head1 Operators
+
+=head2 X«infix:<∘>»
+
+The function combinator C«infix:<∘>» or C«infix:<o>» combines two functions of arity one, so that the left function is called with the return value of the right function.
+
+    sub f($p){ say 'f'; $p / 2 } 
+    sub g($p){ say 'g'; $p * 2 } 
+    my &f-g = &f ∘ &g; 
+    say f-g(2); # OUTPUT«g␤f␤2␤»
+
 =end pod
