expound degree of parallelism

--- a/Type/Iterable.pod
+++ b/Type/Iterable.pod
@@ -94,7 +94,7 @@ Usage:
     ITERABLE.race(BATCH?, DEGREE?)
 
 Returns another Iterable that is potentially iterated in parallel, with a
-given batch size and degree of parallelism.
+given batch size and degree of parallelism (number of parallel workers).
 
 Unlike C<hyper>, C<race> does not preserve the order of elements.
 
