--- a/Language/regexes.pod
+++ b/Language/regexes.pod
@@ -756,7 +756,7 @@ you can reformat the time from C<HH:MM> to C<h:MM {AM,PM}> like so:
     .say;                                                    # 6:38 PM
 
 Using the modulo C<%> operator above keeps the sample code under 80 characters,
-but is otherwise the same as C<$0 < 12 ?? $0 !! $0 - 12>.  When combined with
+but is otherwise the same as C« $0 < 12 ?? $0 !! $0 - 12 ».  When combined with
 the power of the Parser Expression Grammars that B<really> underly what you're
 seeing here, you can use "regular expressions" to parse pretty much any
 language out there.
@@ -1252,7 +1252,7 @@ the vertical bars:
         <postamble>
     }
 
-=head2 Keep it small
+ead2 Keep it small
 
 Regexes come with very little boilerplate, so they are often more compact
 than regular code.  Thus it is important to keep regexes short.
