--- a/Type/Callable.pod
+++ b/Type/Callable.pod
@@ -40,7 +40,7 @@ corresponding parameters.
 
 =head1 Operators
 
-=head2 X«infix:<∘>»
+=head2 C<< infix:<∘> >>
 
 The function combinator C«infix:<∘>» or C«infix:<o>» combines two functions of arity one, so that the left function is called with the return value of the right function.
 
