--- a/Language/regexes.pod
+++ b/Language/regexes.pod
@@ -1252,7 +1252,7 @@ the vertical bars:
         <postamble>
     }
 
-ead2 Keep it small
+=head2 Keep it small
 
 Regexes come with very little boilerplate, so they are often more compact
 than regular code.  Thus it is important to keep regexes short.
