Fix broken link

--- a/Type/IO.pod
+++ b/Type/IO.pod
@@ -264,8 +264,8 @@ contents are actually written to the file.
 
 Slurps the contents of the entire file into a C<Str> (or C<Buf> if C<:bin>).
 Accepts C<:bin> and C<:enc> optional named parameters, with the same meaning
-as L</open()>.  The routine will C<fail> if the file does not exist, or is a
-directory.
+as L<open()|/routine/open>.  The routine will C<fail> if the file does not
+exist, or is a directory.
 
     # read entire file as (Unicode) Str
     my $text_contents   = slurp "path/to/file";
