--- a/Type/Supply.pod
+++ b/Type/Supply.pod
@@ -41,6 +41,8 @@ The L<live method|#method live> returns C<True> on live supplies. Factory
 methods such as L<interval|#method interval>, L<from-list|#method from-list>
 will return I<on demand> supplies.
 
+Further examples can be found in the L<concurrency page|/language/concurrency#Supplies>.
+
 =head1 Methods that return Taps
 
 =head2 method tap
