--- a/Type/Promise.pod
+++ b/Type/Promise.pod
@@ -46,6 +46,8 @@ the C<vow> method to get a unique handle, and call C<keep> or C<break> on it:
     }
 =end code
 
+Further examples can be found in the L<concurrency page|/language/concurrency#Promises>.
+
 =head1 Methods
 
 =head2 method start
@@ -231,6 +233,14 @@ exception of type C<X::Promise::Vowed>.
     my $vow = $p.vow;
     $vow.keep;
     say $p.status;          # Kept
+
+=head2 method Supply
+
+	method Supply(Promise:D:)
+
+Returns a L<Supply> that will emit the C<result> of the L<Promise> being Kept
+or C<quit> with the C<cause> if the L<Promise> is Broken.  
+
 
 =head2 sub await
 
