fixed parentheses (can't have single quotes inside single quotes)

--- a/Language/traps.pod
+++ b/Language/traps.pod
@@ -142,7 +142,7 @@ Ways to match whitespace:
 Beginners might expect a variable in a C<Capture> to supply its current
 value when that C<Capture> is later used.  For example:
 
-    $ perl6 -e 'my $a = 2; say join ',', ($a, ++$a)'
+    $ perl6 -e 'my $a = 2; say join ",", ($a, ++$a)'
     3,3
 
 Here the C<Capture> contained the B<container> pointed to by C<$a> and the
@@ -152,7 +152,7 @@ looks inside the container in C<$a> and so it may already be incremented.
 
 Instead, use an expression that produces a value when you want a value.
 
-    $ perl6 -e 'my $a = 2; say join ',', (+$a, ++$a)'
+    $ perl6 -e 'my $a = 2; say join ",", (+$a, ++$a)'
     2,3
 
 =head1 Arrays
