get a few more heading levels in line

--- a/Type/IO/Spec/Cygwin.pod
+++ b/Type/IO/Spec/Cygwin.pod
@@ -9,6 +9,8 @@
 This sub-class of L<IO::Spec> will be available from the
 C<$*SPEC> variable for a perl running on C<Cygwin> .
 
+=head1 Methods
+
 =head2 method canonpath
 
         method canonpath(IO::Spec:D: Str $patharg, Str :$parent) returns Str
