--- a/Type/IO/Spec/QNX.pod
+++ b/Type/IO/Spec/QNX.pod
@@ -9,6 +9,8 @@
 This sub-class of L<IO::Spec> specific to QNX will be
 available via C<$*SPEC> if the perl is running on QNX.
 
+=head1 Methods
+
 =head2 method canonpath
 
         method canonpath(IO::Spec:D: Str $patharg, Str :$parent) returns Str
