--- a/Type/IO/Spec/Unix.pod
+++ b/Type/IO/Spec/Unix.pod
@@ -9,6 +9,8 @@
 On object of this type is available via the variable C<$*SPEC> if the perl is
 running on a Unix-like platform.
 
+=head1 Methods
+
 =head2 method canonpath
 
         method canonpath(IO::Spec:D: Str $patharg, Str :$parent) returns Str
