--- a/Type/IO/Spec/Win32.pod
+++ b/Type/IO/Spec/Win32.pod
@@ -10,6 +10,8 @@ Objects of this class are not used directly but as a sub-class specific to
 the platform perl is running on via the C<$*SPEC> variable which will contain
 an object of the appropriate type.
 
+=head1 Methods
+
 =head2 method canonpath
 
         method canonpath(IO::Spec:D: Str $patharg, Str :$parent) returns Str
