--- a/Type/IO/Spec.pod
+++ b/Type/IO/Spec.pod
@@ -14,6 +14,8 @@ The sub-classes are documented separately, with the platform-specific
 differences documented in L<IO::Spec::Cygwin>, L<IO::Spec::QNX>,
 L<IO::Spec::Unix> and L<IO::Spec::Win32>.
 
+=head1 Methods
+
 =head2 method canonpath
 
         method canonpath(IO::Spec:D: Str $patharg, Str :$parent) returns Str
