--- a/Type/IO/Spec/QNX.pod
+++ b/Type/IO/Spec/QNX.pod
@@ -1,6 +1,6 @@
 =begin pod
 
-=TITLE class IO::Spec
+=TITLE class IO::Spec::QNX
 
 =SUBTITLE Platform specific operations on file and directory paths QNX
 
