--- a/Type/List.pod
+++ b/Type/List.pod
@@ -904,6 +904,8 @@ Combining multiple cycles and C<:partial> also works:
     say ('a'..'h').rotor(1 => 1, 3 => -1, :partial).join('|');
                                                     # a|c d e|e|g h
 
+See L<this blog post for more elaboration on rotor|http://blogs.perl.org/users/zoffix_znet/2016/01/perl-6-rotor-the-king-of-list-manipulation.html>.
+
 =head2 routine zip
 
 Defined as:
