--- a/Type/Signature.pod
+++ b/Type/Signature.pod
@@ -45,7 +45,7 @@ cloasure.
 	sub will-work(Int){}
 	sub won't-work(Str){}
 	f(&will-work);
-	f(&wont-work); # fails at runtime
+	f(&won't-work); # fails at runtime
 	f(-> Int { 'this works too' } );
 
 =head2 Parameter Separators
