s/won't-work/wont-work/
and a typo

--- a/Type/Signature.pod
+++ b/Type/Signature.pod
@@ -39,13 +39,13 @@ my $sig = B<:($a, $b)>;
 =end code
 
 Signature literals can be used to define the signature of a callback or a
-cloasure.
+closure.
 
 	sub f(&c:(Int)){}
 	sub will-work(Int){}
-	sub won't-work(Str){}
+	sub wont-work(Str){}
 	f(&will-work);
-	f(&won't-work); # fails at runtime
+	f(&wont-work); # fails at runtime
 	f(-> Int { 'this works too' } );
 
 =head2 Parameter Separators
