s/wont-work/won't-work/
I had no idea that that worked. Excuse me.

--- a/Type/Signature.pod
+++ b/Type/Signature.pod
@@ -43,9 +43,9 @@ closure.
 
 	sub f(&c:(Int)){}
 	sub will-work(Int){}
-	sub wont-work(Str){}
+	sub won't-work(Str){}
 	f(&will-work);
-	f(&wont-work); # fails at runtime
+	f(&won't-work); # fails at runtime
 	f(-> Int { 'this works too' } );
 
 =head2 Parameter Separators
