--- a/Language/variables.pod
+++ b/Language/variables.pod
@@ -1025,6 +1025,8 @@ Other compile-time variables:
     ==
     $*ERR              Standard error filehandle, AKA stderr
     ==
+    %*ENV              Environment variables
+    ==
     $*REPO             A variable holding information about modules installed/loaded
     ==
     $*TZ               The system's local timezone.
