faq string interpolation and html

--- a/Language/faq.pod
+++ b/Language/faq.pod
@@ -342,6 +342,18 @@ There are several reasons:
 
 =item they aren't mandatory, since you can declare sigilless names (if you don't mind the ambiguity)
 
+=head2 "Type Str does not support associative indexing."
+
+You likely tried to mix string interpolation and HTML.
+
+    my $foo = "abc";
+    say "$foo<html-tag>";
+
+Perl 6 thinks C<$foo> to be a Hash and C«<html-tag>» to be a string literal
+hash key. Use a closure to help it to understand you.
+
+    my $foo = "abc";
+    say "{$foo}<html-tag>";
 
 =head2 Does Perl 6 have coroutines? What about C<yield>?
 
